--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     implementation 'com.sangcomz:FishBun:0.8.6'
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
 }
